--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "@adonisjs/session": "^6.4.0",
     "@adonisjs/shield": "^7.1.1",
     "@adonisjs/view": "^6.2.0",
+    "axios": "^1.6.2",
+    "fs": "0.0.1-security",
     "luxon": "^3.4.4",
     "proxy-addr": "^2.0.7",
     "reflect-metadata": "^0.1.13",
